--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "discord.js": "^14.14.1",
+    "dotenv": "^17.2.1",
     "node-fetch": "^3.3.2",
     "uws": "github:uNetworking/uWebSockets.js#v20.44.0"
   },
