--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "discord.js": "^14.14.1",
     "dotenv": "^17.2.1",
+    "ioredis": "^5.3.2",
     "node-fetch": "^3.3.2",
     "uws": "github:uNetworking/uWebSockets.js#v20.44.0"
   },
   "devDependencies": {
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^20.11.19",
+    "minimatch": "^10.0.3",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
