ci: added github actions

--- a/apps/vscode-ext/package.json
+++ b/apps/vscode-ext/package.json
@@ -89,6 +89,7 @@
     }
   },
   "scripts": {
+    "build": "yarn vsce package",
     "compile": "yarn run check-types && node esbuild.js",
     "check-types": "tsc --noEmit",
     "watch": "npm-run-all -p watch:*",
