ci: minor changes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
           echo "DISCORD_TOKEN=dummy_token" > .env
           echo "TARGET_USER_ID=123456789" >> .env
           echo "API_KEY=dummy_api_key" >> .env
-          docker-compose config
+          docker compose config
 
   lint:
     runs-on: ubuntu-latest
