--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,8 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
